// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-2ppt5u=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots appearance flat 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-34jan8=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots appearance stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-1pb6xuj=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots as link default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <a
    data-css-2ppt5u=""
    disabled={false}
    href="https://duckduckgo.com"
  >
    <span
      className="css-1en8fmq"
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots as link with icon 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <a
    data-css-2ppt5u=""
    disabled={false}
    href="https://duckduckgo.com"
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots disabled default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-ck5bq7=""
    disabled={true}
  >
    <span
      className="css-1en8fmq"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots disabled flat 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-10juzpr=""
    disabled={true}
  >
    <span
      className="css-1en8fmq"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots disabled stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-1e3x6qb=""
    disabled={true}
  >
    <span
      className="css-1en8fmq"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots disabled with icon 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-ck5bq7=""
    disabled={true}
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.2762 15.862L5 19l3.1392-.275 8.0858-8.0858-2.863-2.863-8.0858 8.0858zm12.363-6.637l.7668-.7667c.384-.3842.5922-.887.5922-1.4318 0-.5455-.208-1.048-.5932-1.4328-.3838-.3838-.885-.5912-1.4308-.5912-.5446 0-1.047.208-1.4318.5932l-.7662.7663 2.863 2.863zm-.665-6.2225c1.076 0 2.086.418 2.845 1.177.761.76 1.179 1.772 1.179 2.847 0 1.074-.418 2.086-1.178 2.846l-10.409 10.409c-.128.128-.289.22-.464.263l-4.705.427c-.34.085-.702-.015-.949-.264-.248-.247-.348-.608-.264-.949l.427-4.704c.044-.176.135-.336.263-.464l10.409-10.409c.76-.761 1.772-1.179 2.846-1.179z"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots icon default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-2ppt5u=""
    disabled={false}
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon flat 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-34jan8=""
    disabled={false}
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon large 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-15xj0eq=""
    disabled={false}
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon left 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-2ppt5u=""
    disabled={false}
    iconAlign="left"
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon lone default 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-3fs4b8=""
    disabled={false}
  >
    <div
      className="css-1nws9sr"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat large 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-1y4dx8w=""
    disabled={false}
  >
    <div
      className="css-1nws9sr"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat medium 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-1dwn2kq=""
    disabled={false}
  >
    <div
      className="css-1nws9sr"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat small 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-1hxju1l=""
    disabled={false}
  >
    <div
      className="css-1nws9sr"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone flat xSmall 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-1qoc4fw=""
    disabled={false}
  >
    <div
      className="css-1nws9sr"
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke large 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-1yg3nm9=""
    disabled={false}
  >
    <div
      className="css-1nws9sr"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke medium 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-fvx27=""
    disabled={false}
  >
    <div
      className="css-1nws9sr"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke small 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-8wzr8u=""
    disabled={false}
  >
    <div
      className="css-1nws9sr"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon lone stroke xSmall 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-1pqua8q=""
    disabled={false}
  >
    <div
      className="css-1nws9sr"
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    />
  </button>
</div>
`;

exports[`Storyshots icon medium 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-2ppt5u=""
    disabled={false}
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon right 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-16unde1=""
    disabled={false}
    iconAlign="right"
  >
    <div
      className="css-1cjmww0"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon small 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-auzszc=""
    disabled={false}
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-1pb6xuj=""
    disabled={false}
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-otejxm"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots icon xSmall 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-rfhejr=""
    disabled={false}
  >
    <div
      className="css-7btetm"
    >
      <div
        className="css-12f5sv2"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.59 14.58l-3.17-3.17L5 12.82l4.59 4.59 10-10L18.18 6"
          />
        </svg>
      </div>
    </div>
    <span
      className="css-1en8fmq"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Storyshots size large 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-15xj0eq=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-2ppt5u=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-auzszc=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;

exports[`Storyshots size xSmall 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    data-css-rfhejr=""
    disabled={false}
  >
    <span
      className="css-1en8fmq"
    >
      Click me
    </span>
  </button>
</div>
`;
